All apps need to plug mir-libs now

--- a/ubuntu-personal-store/snapcraft.yaml.in
+++ b/ubuntu-personal-store/snapcraft.yaml.in
@@ -11,6 +11,7 @@ apps:
     command: ubuntu-personal-store.launcher
     plugs:
       - browser-support
+      - mir-libs
       - network
       - opengl
       - unity7
